--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="calculator_item_size">90dp</dimen>
     <dimen name="calculator_line_padding">1dp</dimen>
+    <dimen name="text_size">26sp</dimen>
 </resources>
