--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,7 +13,7 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_weight">1.0</item>
         <item name="android:gravity">center</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">@dimen/text_size</item>
         <item name="android:background">@color/white</item>
         <item name="android:layout_marginRight">@dimen/calculator_line_padding</item>
     </style>
